--- a/style.css
+++ b/style.css
@@ -1091,7 +1091,7 @@ div {
 #introduction_menu #search_radio label {
     color: white;
     text-transform: uppercase;
-    font-size: small;
+    font-size: x-small;
 }
 
 
