#COMPONENTS | MAKE COMPONENTS #2 *******************************************  - PROCESS THE 'TIMELINE' COMPONENT (PARTIAL)

--- a/style.css
+++ b/style.css
@@ -386,7 +386,7 @@ div {
 }
 
 #introduction #interactive_cv_field #timeline li {
-    position: relative;
+    /*position: relative;*/
     margin: 0 2.2%;
     float: left;
     background-color: #ccc;
@@ -396,7 +396,7 @@ div {
 }
 
 #introduction #interactive_cv_field #timeline li p {
-    visibility: hidden;
+    /*visibility: hidden;*/
     height: 1px;
 }
 
