--- a/components/global/GlobalNavigation.css
+++ b/components/global/GlobalNavigation.css
@@ -1,13 +1,15 @@
 nav {
-    display: grid;
-    grid-template: 100px / repeat(4, 1fr);
-    background: blue;
+    display: flex;
+    justify-content: end;
+    padding: 2px 5px;
 }
 
 
 nav > a {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-transform: capitalize;
-    background: red;
-    /*width: 25%;*/
+    padding: 2px 5px;
+    margin: 1px;
+    color: white;
+    background-color: #555555;
 }
