--- a/components/global/GlobalWrapper.css
+++ b/components/global/GlobalWrapper.css
@@ -1,26 +1,13 @@
 #global-wrapper {
-    display: grid;
-    grid-template-rows: 50px 1fr;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 6px;
-    grid-template-areas:
-    "nav search"
-    "content content";
     height: 100vh;
-    background: #555;
-}
-
-.global-search {
-    grid-area: search;
-    background: #444;
 }
 
 .global-navigation {
-    grid-area: nav;
-    background: #444;
+    position: fixed;
+    right: 0;
+    top: 0;
 }
 
 #page-content {
-    grid-area: content;
-    background: #444;
+    height: 100%;
 }
