--- a/components/monitor/MonitorViewQuote.css
+++ b/components/monitor/MonitorViewQuote.css
@@ -6,7 +6,7 @@
     background-size: 750px ;
     background-blend-mode: overlay;
     color: white;
-    height: 300px;
+    height: 100%;
     background-color: #333;
 }
 
