--- a/components/project/ProjectViewItemlist.css
+++ b/components/project/ProjectViewItemlist.css
@@ -1,12 +1,27 @@
 .group-project {
+    position: relative;
+    opacity: 0;
+    bottom: -100%;
+    right: -25%;
+    width: 50%;
+    height: 20px;
     background-color: blue;
-    height: 100%;
+    transition: bottom .2s, right 1s, height 1s, opacity 2s, width 1s;
 }
+
+.group-project.reset {
+    opacity: 1;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 200px;
+}
+
 
 h3 {
     font-size: 1.5rem;
     color: white;
-    text-align: right;
+    text-align: center;
     text-decoration: underline;
 }
 
