#JQOUT | STRIP OFF JQUERY #5 ==============================  - ENABLE 'MONITOR' #1    > NEW MONITOR METHODS: 'INTRO'(RENAME), 'NEXT', '_NEXT-TOOLS'    > MOVE MONITORING TEMPLATES TO 'MONITOR' MODULE INSTEAD OF 'SERVICE' (DATA-SERVICE)    > START 'MONITOR' AFTER 'INTRO'  - CREATE CORE 'ROUTE' FOR INTERPRETING THE 'HTTP-QUERY'
 ++ SIMPLE MODS

--- a/index.css
+++ b/index.css
@@ -560,6 +560,11 @@ div {
     border-bottom: 1px solid tomato;
 }
 
+#introduction #skills_preview .slide_animated {
+    position: initial;
+    /*display: block;*/
+}
+
 #introduction .monitor > ul {
     float: left;
     width: 100%;
@@ -1044,7 +1049,7 @@ div {
     font-size: 2em;
     text-transform: lowercase;
     font-family: Tahoma, Geneva, sans-serif;
-    width:100%;
+    width: 100%;
     text-align: center;
 }
 
