--- a/index.css
+++ b/index.css
@@ -1,14 +1,15 @@
-/*@charset "utf-8";*/
-/*!* CSS Document *!*/
-/*html, body {*/
-/*    float: left;*/
-/*    padding: 0;*/
-/*    margin: 0;*/
-/*    border: 0;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    overflow: hidden;*/
-/*}*/
+@charset "utf-8";
+/* CSS Document */
+html, body {
+    float: left;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+}
 
 /*div {*/
 /*    vertical-align: middle;*/
