--- a/index.css
+++ b/index.css
@@ -8,4 +8,9 @@ html, body {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    font-size: 18px;
+
+    @media (max-width: 992px) {
+        font-size: 16px;
+    }
 }
