--- a/index.css
+++ b/index.css
@@ -1,5 +1,13 @@
 @charset "utf-8";
 
+@font-face {
+    font-family: 'Montserrat-Medium';
+    src: url(/font/Montserrat-Medium.ttf);
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+}
+
 html, body {
     float: left;
     padding: 0;
@@ -9,6 +17,9 @@ html, body {
     height: 100%;
     overflow: hidden;
     font-size: 18px;
+
+    --sgs-font-family: "Montserrat-Medium";
+
 
     @media (max-width: 992px) {
         font-size: 16px;
