--- a/index.css
+++ b/index.css
@@ -1,11 +1,19 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 @font-face {
-    font-family: 'Montserrat-Medium';
-    src: url(/font/Montserrat-Medium.ttf);
-    font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
     font-weight: 400;
-    font-display: swap;
+    font-style: normal;
+    font-variation-settings:
+            "wdth" 100;
+    /*font-family: 'Montserrat-Medium';*/
+    /*src: url(/font/Montserrat-Medium.ttf);*/
+    /*font-style: normal;*/
+    /*font-weight: 400;*/
+    /*font-display: swap;*/
 }
 
 html, body {
@@ -18,7 +26,8 @@ html, body {
     overflow: hidden;
     font-size: 18px;
 
-    --sgs-font-family: "Montserrat-Medium";
+    /*--sgs-font-family: "Montserrat-Medium";*/
+    --sgs-font-family: "Roboto";
 
 
     @media (max-width: 992px) {
